Created new spider plot script
Issues remain with plotting

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 Myo-Arcade.key
+myo-sensor-data-analysis/Myo-Sensor-Analysis.ipynb
+myo-sensor-data-analysis/Myo-Sensor-Analysis.ipynb
+myo-sensor-data-analysis/Myo-Sensor-Analysis.ipynb
+myo-sensor-data-analysis/Myo-Sensor-Analysis.ipynb
+myo-sensor-data-analysis/Myo-Sensor-Analysis.ipynb
